fix security and thread safety issues